# ffmpeg

ndk_ffmpeg/app/: CMakeLists.txt  build.gradle
ndk_ffmpeg/app/src/androidTest/java/com/ndk_ffmpeg/: ExampleInstrumentedTest.java
ndk_ffmpeg/app/src/main/: AndroidManifest.xml
ndk_ffmpeg/app/src/main/cpp/: native-lib.cpp
ndk_ffmpeg/app/src/main/java/com/ndk_ffmpeg/: MainActivity.java
ndk_ffmpeg/app/src/main/res/layout/: activity_main.xml
ndk_ffmpeg/app/src/test/java/com/ndk_ffmpeg/: ExampleUnitTest.java
